* 2003-07-09  Jasper Huijsmans <huysmans@users.sourceforge.net>

Removed 'revert' functionality from the panel. This changes plugin API. All
plugins must be recompiled and plugins providing options need to update to use
the new API.

* 2003-06-17  Benedikt Meurer <Benedikt.Meurer@unix-ag.uni-siegen.de>

Added async-exec patch to improve the responsiveness of the UI.


