@@ -7,7 +7,7 @@ dnl
 
 AC_INIT([panel/main.c])
 
-AM_INIT_AUTOMAKE([xfce4-panel], [3.99.2])
+AM_INIT_AUTOMAKE([xfce4-panel], [3.99.2.1])
 
 AM_CONFIG_HEADER([config.h])
 
