@@ -1,3 +1,15 @@
+* 2003-07-25  Jasper Huijsmans <huysmans@users.sourceforge.net>
+
+Improved autohide handling and reorientation.
+
+* 2003-07-18  Olivier Fourdan <fourdan@xfce.org>
+
+Update default configuration
+
+* 2003-07-18  Jasper Huijsmans <huysmans@users.sourceforge.net>
+
+Update plugin API to prevent old plugins from crashing the panel.
+
 * 2003-07-09  Jasper Huijsmans <huysmans@users.sourceforge.net>
 
 Removed 'revert' functionality from the panel. This changes plugin API. All
